Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-12161

Qt Creator don't set title for the print job when printing.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • Qt Creator 3.2.0-beta1
    • Qt Creator 3.2.0-beta1
    • Editors
    • None
    • adb5a7a70820a502f58a591f61a6d8a60008e635

    Description

      Because of a stupid mistake, the program does not set the title for a print job. When checking the document title, exclamation mark was skipped.

      qt-creator/src/plugins/texteditor/basetexteditor.cpp Line 344

      void BaseTextEditorWidgetPrivate::print(QPrinter *printer)
      {
      QTextDocument *doc = q->document();

      QString title = m_document->displayName();
      if (title.isEmpty())
      printer->setDocName(title);

      if (title.isEmpty()) should be if (!title.isEmpty())

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            sokoloff Alex Sokolov
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes